feat(price): add bonus 1.5.0 price delete endpoint
